--- a/src/Movies_for_you/pjt.css
+++ b/src/Movies_for_you/pjt.css
@@ -17,6 +17,7 @@ html {
 body {
   max-width: 1440px;
   margin: 0 auto;
+  background-color: #e8e8e8;
 }
 .flex {
   display: flex;
@@ -31,4 +32,63 @@ h1 {
 h3 {
   font-size: 3rem;
   padding-top: 1.5rem;
+}
+
+form {
+  padding: 2rem;
+}
+form input {
+  border-radius: 2rem;
+  padding: 1rem 2rem;
+  font-weight: 600;
+  border: none;
+}
+.box-input {
+  flex-direction: row;
+  justify-content: space-between;
+  padding-bottom: 2.5rem;
+}
+#btnSearch {
+  background-color: #dbf726;
+  color: #000000;
+}
+.box-btn input {
+  background-color: #ffffff;
+  border: 2px solid #dbf726;
+}
+.box-btn {
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: space-between;
+}
+section {
+  display: grid;
+  gap: 1rem;
+  row-gap: 2rem;
+  grid-template-columns: repeat(3, 1fr);
+}
+section div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  border-radius: 2rem;
+  font-size: 1.2rem;
+  width: 20rem;
+  height: 20rem;
+  background-color: #ffc061dd;
+}
+h4 {
+  font-size: 1.6rem;
+}
+h6 {
+  font-size: 3rem;
+  width: 100vw;
+  padding-top: 5rem;
+  color: tomato;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
