--- a/src/Movies_for_you/pjt.css
+++ b/src/Movies_for_you/pjt.css
@@ -76,9 +76,12 @@ section div {
   align-items: center;
   border-radius: 2rem;
   font-size: 1.2rem;
-  width: 20rem;
-  height: 20rem;
+  width: 25rem;
+  height: 25rem;
   background-color: #ffc061dd;
+}
+section div ul {
+  list-style: none;
 }
 h4 {
   font-size: 1.6rem;
